--- a/package.json
+++ b/package.json
@@ -30,11 +30,7 @@
   "dependencies": {
     "passport-strategy": "1.x.x"
   },
-  "devDependencies": {
-    "mocha": "1.x.x",
-    "chai": "1.x.x",
-    "chai-passport-strategy": "0.1.x"
-  },
+  "devDependencies": {},
   "engines": {
     "node": ">= 0.4.0"
   }
