--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   ],
   "main": "./lib",
   "dependencies": {
-    "passport-strategy": "1.x.x"
+    "passport-strategy": "^1.0.0"
   },
   "devDependencies": {},
   "engines": {
